fullSandbox11072023/force-app/main/default/objects/IDN_Payment__c/IDN_Payment__c.object-meta.xml
<CustomObject>
    <label>IDN Payment</label>
    <nameField>
        <displayFormat>IP-{000000000}</displayFormat>
        <label>IDN Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IDN Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>