fullSandbox11072023/force-app/main/default/objects/IDN_Payment__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <label>Check Number</label>
    <type>TextArea</type>
</CustomField>