fullSandbox11072023/force-app/main/default/objects/IDN_Payment__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>64</length>
    <type>Text</type>
</CustomField>