fullSandbox11072023/force-app/main/default/objects/IDN_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>IDN_Contract__c</columns>
    <columns>Period__c</columns>
    <columns>Check_Date__c</columns>
    <columns>Check_Number__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Payment_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>